--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,4 +1,4 @@
-form {
+/* form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,4 +8,4 @@ form {
 }
 button {
   margin: 10px 0;
-}
+} */
