--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,20 @@ form input:focus {
 
   border-bottom: 1px solid #dfdfdf;
 }
+.listHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.filterButtons {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.filterBtn {
+  padding: 4px 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: rgb(223, 223, 223);
+}
